--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </table>
 
 <h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!</h2>
-
+A good suggestion
 <script>
   // Initialization
   const boxes = Array.from(document.querySelectorAll("td"));
